# yacen-core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs
proto/yacen/: api_v2.proto
proto/yacen/v1_0/: api.proto
proto/yacen/v1_1/: api.proto
proto/yacen/v2_0/: api.proto
proto/yacen/v2_1/: Yacen API v2.1 [EN].md  Yacen API v2.1 [RU].md  api.proto
src/: impls.rs  lib.rs  models.rs  security.rs
src/security/: aes_256_gcm.rs  ed25519.rs  ed25519_client.rs  mod.rs
