[package]
name= "yacen-core"
version = "0.3.2"
description = "Core library for yacen, simplifying client development"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/notbalds/yacen-core"

[dependencies]
prost = "0.13.5"
prost-types = "0.13.5"
tonic = { version = "0.13.1", features = ["transport", "codegen", "tls-native-roots"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
ecies = { version = "0.2.9", default-features = false, features = ["aes-rust", "std"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
sha2 = "0.10.9"
ed25519-dalek = { version = "2.2.0", features = ["serde", "rand_core"] }
bimap = { version = "0.6.3", features = ["serde"] }
thiserror = "2.0.12"
aes-gcm = { version = "0.10.3", features = ["aes", "getrandom", "rand_core", "std"], default-features = false }
ring = { version = "0.17.14", default-features = false, features = ["std"] }

[build-dependencies]
tonic-build = "0.13.1"

